--- a/DanfossHeating/Views/MachineryPage.axaml
+++ b/DanfossHeating/Views/MachineryPage.axaml
@@ -21,6 +21,9 @@
             
         <!-- Add the number converter -->
         <converters:StringToNumberConverter x:Key="StringToNumberConverter" />
+        
+        <!-- Add the machine type converter -->
+        <converters:MachineTypeConverter x:Key="MachineTypeConverter" />
             
         <!-- Style for the editable text boxes - simplified -->
         <Style x:Key="EditableValueTextBox" Selector="TextBox">
@@ -537,7 +540,7 @@
                                         BorderThickness="0,0,0,3"
                                         BoxShadow="{Binding Path=(views:MachineryPage.IsDarkTheme), ElementName=MachineryPageControl, Converter={StaticResource BoolToColorConverter}, ConverterParameter='0 4 15 0 #60000000:0 4 15 0 #25000000'}"
                                         CornerRadius="8">
-                                        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto">
+                                        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
                                             <!-- Warning Banner -->
                                             <Border 
                                                 Grid.Row="0"
@@ -632,29 +635,8 @@
                                                 </StackPanel>
                                             </Grid>
 
-                                            <!-- Maintenance Date Label -->
-                                            <Border
-                                                Grid.Row="3"
-                                                Background="{Binding Path=(views:MachineryPage.IsDarkTheme), ElementName=MachineryPageControl, Converter={StaticResource BoolToColorConverter}, ConverterParameter='#2A2A2A:#F8F8F8'}"
-                                                BorderThickness="0"
-                                                CornerRadius="4"
-                                                Margin="12,0,12,12"
-                                                Padding="8,6">
-                                                <StackPanel Orientation="Horizontal" Spacing="6">
-                                                    <PathIcon
-                                                        Width="14"
-                                                        Height="14"
-                                                        Data="M19,3H18V1H16V3H8V1H6V3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19M19,6H5V5H19M7,10H12V15H7"
-                                                        Foreground="#D40000"/>
-                                                    <TextBlock
-                                                        FontSize="12"
-                                                        Foreground="{Binding Path=(views:MachineryPage.IsDarkTheme), ElementName=MachineryPageControl, Converter={StaticResource BoolToColorConverter}, ConverterParameter='#E0E0E0:#666666'}"
-                                                        Text="{Binding Name, Converter={StaticResource MaintenanceDateConverter}}"/>
-                                                </StackPanel>
-                                            </Border>
-
                                             <!-- Machine Data -->
-                                            <Grid Grid.Row="4" Margin="12,0,12,12" RowDefinitions="Auto,Auto,Auto,Auto,Auto">
+                                            <Grid Grid.Row="3" Margin="12,0,12,12" RowDefinitions="Auto,Auto,Auto,Auto,Auto">
                                                 <!-- Heat Output MW -->
                                                 <Grid Grid.Row="0" Margin="0,0,0,8">
                                                     <TextBlock
@@ -795,13 +777,10 @@
                                                         />
                                                 </Grid>
                                             </Grid>
-
-                                            <!-- Add spacing before buttons -->
-                                            <Border Grid.Row="5" Height="35"/>
-
+                                            
                                             <!-- Save Button -->
                                             <Button 
-                                                Grid.Row="6"
+                                                Grid.Row="4"
                                                 Margin="12,0,12,12"
                                                 HorizontalAlignment="Stretch"
                                                 HorizontalContentAlignment="Center"
@@ -811,13 +790,12 @@
                                                 Padding="0,8"
                                                 x:Name="SaveButton"
                                                 Click="SaveButton_Click"
-                                                Tag="{Binding}"
-                                                ZIndex="2">
+                                                Tag="{Binding}">
                                                 <StackPanel Orientation="Horizontal" Spacing="8">
                                                     <PathIcon
                                                         Width="16"
                                                         Height="16"
-                                                        Data="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5H10v4z"
+                                                        Data="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"
                                                         Foreground="White" />
                                                     <TextBlock Text="Save Changes" />
                                                 </StackPanel>
@@ -825,7 +803,7 @@
                                             
                                             <!-- Disable Button -->
                                             <Button 
-                                                Grid.Row="7"
+                                                Grid.Row="5"
                                                 Margin="12,0,12,12"
                                                 HorizontalAlignment="Stretch"
                                                 HorizontalContentAlignment="Center"
@@ -835,8 +813,7 @@
                                                 Padding="0,8"
                                                 x:Name="DisableEnableButton"
                                                 Click="ToggleEnableButton_Click"
-                                                Tag="{Binding}"
-                                                ZIndex="1">
+                                                Tag="{Binding}">
                                                 <StackPanel Orientation="Horizontal" Spacing="8">
                                                     <PathIcon
                                                         Width="16"
